--- a/templates/main.html
+++ b/templates/main.html
@@ -1,9 +1,20 @@
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
   <script>
-    function refresh_img($img) {
-      $img.each(function() {
-        $(this).attr('src', '/random_image?_=' + (new Date()).getTime() + Math.random());
+    function refresh_img($images) {
+      $images.each(function() {
+        var img = this;
+        $.get('/random_image', function (data) {
+          var current = $('img').map(function() {return $(this).data('filename')}).toArray();
+
+          if (current.indexOf(data.filename) == -1) {
+            $(img).data('filename', data.filename);
+            $(img).attr('src', '/images/' + encodeURIComponent(data.filename));
+          }
+          else {
+            refresh_img($(img));
+          }
+        });
       });
     }
 
